# chordscope

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: example.toml
src/chordscope/: __init__.py  _compat.py  audio.py  cli.py  config.py  discovery.py  genre_catalog.py  models.py  pipeline.py
src/chordscope/analyzers/: __init__.py  beats.py  chords.py  genre.py  key.py  modulation.py  style.py  tempo.py  tempo_curve.py  theory.py
src/chordscope/reporting/: __init__.py  console.py  json_report.py  markdown.py  narrative.py  plots.py
tests/: conftest.py  test_analyzers.py  test_audio.py  test_compat.py  test_config.py  test_discovery.py  test_genre.py  test_models.py  test_modulation.py  test_modulation_ab.py  test_narrative.py  test_pipeline.py  test_reporting.py  test_tempo_curve.py  test_tempo_curve_ab.py  test_unicode_paths.py
tests/fixtures/user-audio/: .gitignore  README.md
